--- a/kubernetes/helmfile.d/02-core.gotmpl.yaml
+++ b/kubernetes/helmfile.d/02-core.gotmpl.yaml
@@ -28,6 +28,12 @@ releases:
           enabled: true
         nodeSelector:
           kubernetes.io/hostname: mlops-work-01
+        cainjector:
+          nodeSelector:
+            kubernetes.io/hostname: mlops-work-01
+        webhook:
+          nodeSelector:
+            kubernetes.io/hostname: mlops-work-01
     hooks:
       - events: ["postsync"]
         showlogs: true
