restore ai folder and add ai gateway crds

--- a/kubernetes/apps/networking/cilium/kustomization.yaml
+++ b/kubernetes/apps/networking/cilium/kustomization.yaml
@@ -7,3 +7,10 @@ resources:
   - ip-pool.yaml
   - announcement.yaml
   - gatewayclass.yaml
+helmCharts:
+  - name: ai-gateway-helm
+    repo: oci://docker.io/envoyproxy
+    version: v0.0.0-latest
+    namespace: ai
+    releaseName: ai-gateway
+    includeCRDs: true
