--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -3,6 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - gateway.yaml
+  - providers
+  - airoutes.yaml
+
 helmCharts:
   - name: open-webui
     repo: https://helm.openwebui.com/
