fix kubelet patch

--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -75,8 +75,21 @@ envoy:
       keepCapNetBindService: true
       envoy: [ NET_ADMIN, PERFMON, BPF ]
 
+bandwidthManager:
+  enabled: true
+
 hubble:
   enabled: true
+  metrics:
+    enabled:
+      - dns:query
+      - drop
+      - tcp
+      - flow
+      - icmp
+      - http
+    serviceMonitor:
+      enabled: true
   relay:
     enabled: true
     rollOutPods: true
