setup envoy gateway base

--- a/kubernetes/helmfile.d/02-core.gotmpl.yaml
+++ b/kubernetes/helmfile.d/02-core.gotmpl.yaml
@@ -45,6 +45,7 @@ releases:
 
   - name: homelab-gateway
     chart: ../charts/homelab-gateway
+    namespace: kube-system
     needs:
       - external-dns/external-dns
       - cert-manager/cert-manager
