--- a/kubernetes/charts/homelab-gateway/Chart.yaml
+++ b/kubernetes/charts/homelab-gateway/Chart.yaml
@@ -5,3 +5,11 @@ description: Helm Chart for homelab gateway
 type: application
 version: '1.0.0'
 appVersion: 'v1.0.0'
+
+dependencies:
+  - name: gateway-helm
+    version: v0.0.0-latest
+    repository: oci://docker.io/envoyproxy
+  - name: ai-gateway-helm
+    version: v0.0.0-latest
+    repository: oci://docker.io/envoyproxy
