setup ai gateway

--- a/platform/ai/k8s/secrets.enc.yaml
+++ b/platform/ai/k8s/secrets.enc.yaml
@@ -1,25 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:ORk=,iv:PiSX8hyZQsC8nHsEWlnhV+Mdwq35yAxPb7YUfCEjb7s=,tag:TEP+8Cm5xxAmNfB20sycsQ==,type:str]
-kind: ENC[AES256_GCM,data:u6JSMSWS,iv:yziFvM0GQfmw8C/jtOvqqtTdugTV4LYvO1kFE0NZr4I=,tag:/gyu2+5+LqMwQSzN2Wtfkg==,type:str]
+apiVersion: ENC[AES256_GCM,data:b5E=,iv:HPaLD+kjoPZS6foK0o55gnNvXL2a+ddCsAIpL3/2ZY8=,tag:BH+FHpTcWbJWbS4i2tMQAQ==,type:str]
+kind: ENC[AES256_GCM,data:CXBkqZ7Z,iv:XAoThTAI/4EeyqxsfRvIPa3hSXtBsDtwq7DHrJUM65I=,tag:NIS1acatxGJMWpTqO7YlAA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:sSDtcIYo4uHxGQY1gYckRlI=,iv:ty0IV7AgdUWf9PIOQhF6SagRFRkyy9fhb4S7pZj3zPo=,tag:6LPjyH4RYbwLxAcmFSf9zw==,type:str]
-    namespace: ENC[AES256_GCM,data:ryM=,iv:p4U/aNjJsOM8RquTvzWszw1Py3zp01QeEvdeaRGaEko=,tag:UPQUiA204VnnWJlqRHk3kQ==,type:str]
+    name: ENC[AES256_GCM,data:e4rc7JuWOLaUMKTkIczvO30=,iv:jVGnjANuJ1u627ZAk/ah07TepZj60Sr7/X8sU3PsVfY=,tag:ae8OTldItA88aFI19iBxRg==,type:str]
+    namespace: ENC[AES256_GCM,data:YUc=,iv:jibY1CK3Y4BJofvtD0cNsj88if/fVTnqUS4PSAGxAac=,tag:fGb+KDoFpcnQbGtYRGa3kA==,type:str]
 stringData:
-    webui_secret: ENC[AES256_GCM,data:j93ZHu6uT65cbE67XZeCQ+HGD09s8GX8hNYfg3k=,iv:7eqEfwqd4BUau/8futMNph/sxp0a4zPIZvgxR3xR0+U=,tag:2cl97tQRE0L+FnFXFBnceA==,type:str]
-    webui_api_key: ENC[AES256_GCM,data:GitdXYro7VY53XC+ZzAoumGUXW7Y8bgMtX+85LLeAI7/KwA=,iv:irtRusidCmbtme1BRaSCvy0gPoH8KYypsNKT2ctsoxA=,tag:bqJiTBZ+06gSrDD+5IO/fw==,type:str]
-    github_token: ENC[AES256_GCM,data:OtXb1ZmBs6RtjJFjz2cPADmEbpCVrTdWxV/p+6v+uhvZbcNCsmpZYA==,iv:wU6WaEj09PdJXd/O6mD6Sjntyri18eJfeCgwk77udtY=,tag:C9d7vHxyhgZ0h8N29Mogvg==,type:str]
-    n8n_api_key: ENC[AES256_GCM,data:j9OpfbyrTbA13FrEyekA00EohZcZWVBERHyv2AMNJOOf3f/A4obpRJio22r3HeMhZSAB0Wj78gTWHxaeeQWxqVUEpDdKDgeWXhEWiq4ece5SQO+KscCc2ctAPAlmaaiqkxnrvgc8QHsbUm3K+rEKDVm6DiBBc/u+FZ0zOcW8ZnPO+6tFBTXyVqr7GLmlKC99XVU3q3jTWwU7X6E7mzrgBk7SaXGsIRB9qROXvTGKHI4Fj6o+R7s8l/hh0uJM9WEsjoiC4zBE9Fq+qptG40/j,iv:BWFR2TmJ6Wvqd7WfDeJPhpgk3mFmROBtOogO8idClwQ=,tag:dlm8c/oEJq0yDZ78gpYVYw==,type:str]
+    webui_secret: ENC[AES256_GCM,data:jtUuLlVQw67Btl0LqnSUhUy4IdlMr2oO2awOfKw=,iv:ht4eSoIakCkvlyS+4e5inxyC/eGDrozS0FQp1DVCl+4=,tag:eUczLpwVROv3A5ggK2JIQQ==,type:str]
+    webui_api_key: ENC[AES256_GCM,data:i6Gj8RjSiJh9vp4EpwRf6o+m7uN3qggwsdlKbVxGKr9iKps=,iv:S3Ijv0N4X2axIKeXD/FCd2UYLM8B3kZluHFEp6inyAM=,tag:m8HFQc9EAg7HBQH3tEAJvQ==,type:str]
+    github_token: ENC[AES256_GCM,data:3vZoXeWrMIMInzneUIJrhuebFB3DFZ6ekl1P5Ak+CBvCKr/Gn1m/HA==,iv:zYXdY7Zq/FB6fWM2lb/A7j+FqMIFJkgAc3LtXVwX8BU=,tag:GwuHdjBsQwdi1XUkwyygTQ==,type:str]
+    n8n_api_key: ENC[AES256_GCM,data:fOPNw51O3065ee8RFLozNxPPxP2tXS9k/EGbPetj7gpK3jbDUpNSJSZN/U/HRBsYst6OgBvJjxiIAa+Pw90lTMPBnoMCjp+b3FJ9FxbNUYlTe682Wpe/ChQKIY00in4WmonBL9/CD11Y91EXbjb25L7hudbqi651130tdFTiQjvv0z1WbUPPQFR5K2Q4T6Qtk6Nqc5HBHXpUFDg4rZyeKtvfCWFgdbkoXKkge9AcLmWSXKOCtaqIYLyQ1/0epA3gyT4eKDDzY28fKESxgK7d,iv:Yfzyshe11rk+StGFlXCwVdjvcKPHU4ae6FmfRtkRKfo=,tag:G8hKZ6VmDEh+YNfIc9op3w==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-03-03T14:59:55Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAEUv/y0E0dxOzy07G1arXVsAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM6dBmxYd3dqfAfBt9AgEQgDvG8EQpLtmav6BEIi4A0z9pOSUFfIEBfpHIOzSMvsxhabwyY8aRVHwo77YJiFryGR2YmAwureaaMLj9Xg==
+          created_at: "2025-04-01T21:25:36Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAEXSJLULQTYerTShEo8r1TtAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMyC8JWYzAgc7O3o5TAgEQgDs0hugFk8CqXbBrkFUQjL1ccuTk2+dTvVDozZZ6MVpWHnDaSrdBW57nDz1wYQG3+EqksSVq2ijNq2NpFQ==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-03-03T14:59:55Z"
-    mac: ENC[AES256_GCM,data:5JDwhXuoZGDMNpcYjETLdOhMmbCCkpe0pdG8gexGohmgyo8W/lVpFwwV19idlaN1Dbji133eAd7RzNFAFYVlAHBoB/HLC0f0JGYDkoFVATu4OHKEyPH8l4QU+THUa/K5N9Yb+qn7KbF6RzIn4CAgUt6wYllFVG9OUDXg1azmm1c=,iv:fG65hNEnNsPss0mrX3YlDMZ/8jsQnotESkk9Udc5AV4=,tag:VMQyu9i5hco325Cy8Rww2g==,type:str]
+    lastmodified: "2025-04-01T21:25:36Z"
+    mac: ENC[AES256_GCM,data:cIIFuANcHL1v8zIFzP/mYfgfT0+YOtwDd+QetVj33xaydrm1rQ5Cdtb4LggC7UfRok3t7KnM5p4KYehslzuqsM8B4MFKBaH/OyF1jtG4QgCRme43k+dFRIzFrr+j7JoBWQyWOfztL/K5cYn9401bERbdyRPxA1vnHokJmTBCTcc=,iv:TObtG1RSzyZTEXTvt9a6nP7LZT3RyyspnIRriYk2Z+c=,tag:O4N4W8QPGOrL24M8WOi2cQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
