--- a/platform/ai/k8s/airoutes.yaml
+++ b/platform/ai/k8s/airoutes.yaml
@@ -8,7 +8,7 @@ spec:
   schema:
     name: OpenAI
   targetRefs:
-  - name: homelab-gateway
+  - name: ai-gateway
     kind: Gateway
     group: gateway.networking.k8s.io
   rules:
@@ -24,3 +24,5 @@ spec:
       - type: Exact
         name: x-ai-eg-model
         value: gpt-4o-mini
+    backendRefs:
+    - name: openai-backend-service
