--- a/platform/ai/k8s/providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/providers/ollama/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - backend.yaml
+  - aiservice.yaml
   - api-key.yaml
