--- a/platform/ai/k8s/providers/openai/api-key.yaml
+++ b/platform/ai/k8s/providers/openai/api-key.yaml
@@ -8,5 +8,5 @@ spec:
   type: APIKey
   apiKey:
     secretRef:
-      name: openai-apikey-secret
+      name: openai-api-key-secret
       namespace: ai
