setup envoy gateway and disabled gateway in cilium

--- a/kubernetes/apps/secrets.enc.yaml
+++ b/kubernetes/apps/secrets.enc.yaml
@@ -1,26 +1,26 @@
-apiVersion: ENC[AES256_GCM,data:PBI=,iv:2HNokmgicLCDQmAFxblBlDiiNDIzfDPbPRJui9DyoFA=,tag:a6cmzWitd4f4JWaDpOy1KQ==,type:str]
-kind: ENC[AES256_GCM,data:f1DRK02b,iv:tBF3T/Nq8hn3QuGwhNsrGdA8pBD0sEel9z/WHgzJ5aw=,tag:qVkanJM2cpXWxglcaYNr7A==,type:str]
+apiVersion: ENC[AES256_GCM,data:+qo=,iv:Kxiwc65yI5vnnbGWYSxmiRSeSMmp7C5cLyeA8jz2pck=,tag:8gMHP01Ueg/7v+170XBsNg==,type:str]
+kind: ENC[AES256_GCM,data:/IUBe7D3,iv:5S3GqUuzsEokkvP1alzhXMdz/VIngU/O3vRW41r/mfk=,tag:XXN/OYd1VCLSztUa3aRizQ==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:cpHeU+qGuLoFHEnkqPwH,iv:Or7dQLGWy614pbeXbN/PnBtGKLeYVfY2Xm3Zr+1NAnE=,tag:uvxuYJbPSXbAfnmyO5paFg==,type:str]
+    name: ENC[AES256_GCM,data:M9PiBOHScf5KZ3ZG2s5f,iv:EaDE73Buhh3QGP7hTlP7GlPAha8MJahJKQ1T5s65GD8=,tag:Eg3RBjNs5ot7YH9IVTjTPQ==,type:str]
     annotations:
-        reflector.v1.k8s.emberstack.com/reflection-allowed: ENC[AES256_GCM,data:2p64rw==,iv:7rSHbBgQJZK9C2RJhuLktpPnh1hbJ2E4YOeEgAKa0JE=,tag:5CgiUX5wTp6VuNwIlGbWzg==,type:str]
-        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:swWA8Q==,iv:ltMuoKkJim8jxb0N+hjCfM+Pb/Av3uTqkxSon+9BWeg=,tag:zG45JyTsdNZqX7X+cRyKpg==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-allowed: ENC[AES256_GCM,data:vj7dXQ==,iv:V95FLz3yniT99Rwtys8JG9A+rxoy4mo+bgEFocuSI8k=,tag:y0+X/iUFp86WGaMlMxdXvQ==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:vpDKNA==,iv:BWbpUZXAZJu8JK0wnrgAO2GamzMs640g3oxuw2uChWU=,tag:ZaRDceJjpXI0nAz3cY9QwA==,type:str]
 stringData:
-    aws_access_key_id: ENC[AES256_GCM,data:38vv4FxfZw6KhC4X5TwT1WlwxUU=,iv:0CrpKRueoXDLT/Jq7wNIwUVflJQyHnFQ2MAiB+c+kCQ=,tag:9bQ4pqvnZ6d8sMGu/iVlPg==,type:str]
-    aws_secret_access_key: ENC[AES256_GCM,data:nHPQ1hjY6f0gD+Ukhq5TZN0qd3qAKgi/l3K9Q93FGAhOBy/zcTxeGQ==,iv:Fr5poeQcVknJ4gOErmRjDlQ1MVAUEHKYiIrXGUKj1ig=,tag:j0QmcuBDjde38q+XkqRiWA==,type:str]
-    aws_homelab_remote_state_backup: ENC[AES256_GCM,data:ZZRV5yiaAenG1eNSp79K7hmb7hot8tI2hnqNlYIgJvY=,iv:G+vAc7b2z604H/lElKTILTuaM9mpLRm7opAg8pbG2wQ=,tag:PyMQ+lYgsMxCGviB1s9arg==,type:str]
+    aws_access_key_id: ENC[AES256_GCM,data:jvxluEXpSrzemdX+/PEzYvrW08Y=,iv:FGAuhUbVq7Plty5qw9DLvAST64TkCuIKG1ahMET8Zew=,tag:k5RKrB78NRdZNYySXvQ8iw==,type:str]
+    aws_secret_access_key: ENC[AES256_GCM,data:/N26kOx6Bku1A/zpQf6LKxBnc95ggsHdk1eQmpRDAT6rBaqn45Ptcg==,iv:+dbK8S2fTnsmsWPbJIcPTiTEocFi4KjRW71aQ/9HYLo=,tag:bKjQ1fxxp1IcmGQvgalJ4w==,type:str]
+    aws_homelab_remote_state_backup: ENC[AES256_GCM,data:TQbX2dj5XEqWOCPkw4Gax/I05eOIrp92uuE4kgjSPBY=,iv:22YRNzGXcNFmIbNRKgsMfGNUEWKBuqYdFaMLNXXBunY=,tag:9RVBmMex5Qhke46YFKsA2A==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-03-05T15:04:07Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAGo6zPtxp3PrOGwS9+HsonNAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMY209pgIfcbFOpO9bAgEQgDvG96a4fGimWbwAlM31YywpY9vUaTTUVLxMRZosC3I9yITuBimwrjn2js7sdKx2/9icgbRDou+h6QNahg==
+          created_at: "2025-04-02T18:28:21Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAHwrn7LFu8J6a5CJCjUj0lGAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMdKUBBMkMyFO3NkY3AgEQgDuuopGE8o+ywOevyHNnYQUPAJnIonQBjYyPehKxn1mNffooLzMYTMW/YgkWpuIv/ii/+CoJVhWd2ntXHA==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-03-05T15:04:07Z"
-    mac: ENC[AES256_GCM,data:YunKuy8NASOXY4uMuovWMmhg5i43ZX8tlVGvzPWjOABxy0nqx7JdNQBtr7CquQrUSPoROAFAo5YQVukhRWhkGzwgeresfvdy4cqDc2m1dFsnO8NO1xWWdrsDYTTMUPmaIUyIjB/MI1XCj0RxjV0XdaDZi9m4POKYLh1upwFjzZk=,iv:OruiLfw9hGR0w1HbS+4Vm5DhOGd/nBQG/yRCyFWV4Cs=,tag:GyhFkqaDdIkjgyCwuykV6g==,type:str]
+    lastmodified: "2025-04-02T18:28:21Z"
+    mac: ENC[AES256_GCM,data:jyiCUbypAwIY6QnifpelCTyb0MYyS9LFIZRyAtlSlbmk+978TmJRfc1JRCLcNLXpQlFbPI4qsjcipcC1a+km91zAGV32fBSVnlXatAMFQOsEwuxCDlRZ8J6EgHPTfs6w8WSss0JT7D5Eyu2NCjNz7LcSlNF2yzjiitR4NbBaooM=,iv:vHmDslsnDkA8xtae96ypLHKVYWwiGaCtF9uKCExwR+E=,tag:rseTYcTajod0c1sFjIaiEA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
