--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -67,13 +67,13 @@ loadBalancer:
   algorithm: maglev
 
 gatewayAPI:
-  enabled: true
+  enabled: false
 
-envoy:
-  securityContext:
-    capabilities:
-      keepCapNetBindService: true
-      envoy: [ NET_ADMIN, PERFMON, BPF ]
+# envoy:
+#   securityContext:
+#     capabilities:
+#       keepCapNetBindService: true
+#       envoy: [ NET_ADMIN, PERFMON, BPF ]
 
 bandwidthManager:
   enabled: true
