--- a/platform/ai/k8s/airoutes.yaml
+++ b/platform/ai/k8s/airoutes.yaml
@@ -18,11 +18,18 @@ spec:
         name: x-ai-eg-model
         value: llama3:latest
     backendRefs:
-    - name: ollama-backend
-  - matches:
-    - headers:
-      - type: Exact
-        name: x-ai-eg-model
-        value: gpt-4o-mini
-    backendRefs:
-    - name: openai-backend-service
+    - name: ollama-backend-service
+  # - matches:
+  #   - headers:
+  #     - type: Exact
+  #       name: x-ai-eg-model
+  #       value: gpt-4o-mini
+  #   backendRefs:
+  #   - name: openai-backend-service
+  # - matches:
+  #   - headers:
+  #     - type: Exact
+  #       name: x-ai-eg-model
+  #       value: us.meta.llama3-2-1b-instruct-v1:0
+  #   backendRefs:
+  #     - name: aws-bedrock-backend
