--- a/platform/ai/k8s/providers/ollama/backend-service.yaml
+++ b/platform/ai/k8s/providers/ollama/backend-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: aigateway.envoyproxy.io/v1alpha1
 kind: AIServiceBackend
 metadata:
-  name: ollama-backend
+  name: ollama-backend-service
   namespace: ai
 spec:
   schema:
