--- a/platform/ai/k8s/secrets-generator.yaml
+++ b/platform/ai/k8s/secrets-generator.yaml
@@ -9,4 +9,5 @@ metadata:
         path: ksops
 files:
   - providers/openai/secret.enc.yaml
+  - providers/bedrock/secret.enc.yaml
   - secrets.enc.yaml
