feature: AI Gateway (#24)
* specify why

* restore ai folder and add ai gateway crds

* save concept

* rm chart from kustomization

* fix kubelet patch

* save branch

* point ollama ai route at cluster gateway

* save work on ai-gateway testing

* add ollama ingress

* setup envoy gateway base

* setup ai gateway

* setup envoy gateway and disabled gateway in cilium

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,6 @@ env
 terraform.tfvars
 .task
 generated
-**/charts
+**/k8s/charts
+kubernetes/apps/**/charts
+kubernetes/charts/homelab-gateway/charts
