--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -3,10 +3,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - gateway.yaml
+  - providers
+  - openwebui-httproute.yaml
+  - ollama-httproute.yaml
+  - airoutes.yaml
+
 helmCharts:
   - name: open-webui
     repo: https://helm.openwebui.com/
-    version: 5.4.0
+    version: 6.0.0
     namespace: ai
     releaseName: open-webui
     valuesFile: openwebui-values.yaml
