--- a/platform/ai/k8s/providers/bedrock/kustomization.yaml
+++ b/platform/ai/k8s/providers/bedrock/kustomization.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kube-system
 resources:
-  - ip-pool.yaml
-  - announcement.yaml
+  - backend.yaml
+  - backend-service.yaml
+  - backend-security-policy.yaml
