--- a/platform/ai/k8s/secrets-generator.yaml
+++ b/platform/ai/k8s/secrets-generator.yaml
@@ -8,4 +8,6 @@ metadata:
       exec:
         path: ksops
 files:
+  - providers/openai/secret.enc.yaml
+  - providers/bedrock/secret.enc.yaml
   - secrets.enc.yaml
