--- a/platform/reading/rss/k8s/kustomization.yaml
+++ b/platform/reading/rss/k8s/kustomization.yaml
@@ -32,7 +32,7 @@ helmCharts:
         ingressClassName: "nginx"
         enabled: true
         hosts:
-        - host: rss.local
+        - host: rss.homelab.internal
           paths:
           - path: /
     persistence:
