--- a/kubernetes/apps/gitops/argocd/route.yaml
+++ b/kubernetes/apps/gitops/argocd/route.yaml
@@ -5,7 +5,5 @@ metadata:
   name: argocd-http-route
   namespace: argocd
   annotations:
-    external-dns.alpha.kubernetes.io/target: gitops.local
-    external-dns.alpha.kubernetes.io/hostname: gitops.local
+    external-dns.alpha.kubernetes.io/hostname: gitops.homelab.internal
 spec:
-  
