--- a/kubernetes/charts/homelab-gateway/templates/gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   name: homelab-gateway
   namespace: kube-system
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: homelab.local
+    external-dns.alpha.kubernetes.io/hostname: homelab.internal
 spec:
   gatewayClassName: envoy
   listeners:
