--- a/platform/automation/k8s/n8n/service.yaml
+++ b/platform/automation/k8s/n8n/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: n8n-service
   namespace: automation
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: n8n.homelab.local
+    external-dns.alpha.kubernetes.io/hostname: n8n.homelab.internal
 spec:
   type: LoadBalancer
   selector:
