--- a/platform/observability/graylog/compose.yaml
+++ b/platform/observability/graylog/compose.yaml
@@ -15,7 +15,7 @@ services:
     # To change password: echo -n "Enter Password: " && head -1 < /dev/stdin | tr -d '\n' | sha256sum | cut -d " " -f1
       GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
       GRAYLOG_ELASTICSEARCH_HOSTS: "http://opensearch:9200"
-      GRAYLOG_HTTP_EXTERNAL_URI: "https://graylog.homelab.local/"
+      GRAYLOG_HTTP_EXTERNAL_URI: "https://graylog.homelab.internal"
       GRAYLOG_MONGODB_URI: "mongodb://mongodb:27017/graylog"
       TZ: "America/NewYork"
       GRAYLOG_ROOT_TIMEZONE: "America/NewYork"
