--- a/kubernetes/charts/homelab-gateway/values.yaml
+++ b/kubernetes/charts/homelab-gateway/values.yaml
@@ -1,6 +1,8 @@
 ---
 gateway-helm:
   config:
+    backendTlsConfig:
+      clientCertificateRef: homelab-tls
     envoyGateway:
       extensionApis:
         enableBackend: true
