--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -7,6 +7,8 @@ repositories:
     url: https://helm.cilium.io
   - name: coredns
     url: https://coredns.github.io/helm
+  - name: csi-driver-nfs
+    url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
 
 releases:
   - name: prometheus-operator-crds
@@ -42,3 +44,16 @@ releases:
       - ../apps/networking/coredns/values.yaml
     needs:
       - kube-system/cilium
+
+  - name: csi-driver-nfs
+    namespace: kube-system
+    chart: csi-driver-nfs/csi-driver-nfs
+    version: 4.11.0
+    # hooks:
+    #   - events: ["postsync"]
+    #     showlogs: true
+    #     command: "bash"
+    #     args:
+    #       - -c
+    #       - |
+    #         kustomize build --enable-exec --enable-helm ../apps/storage/nfs | kubectl apply -f -
