--- a/containers/compose.yaml
+++ b/containers/compose.yaml
@@ -10,3 +10,6 @@ services:
       - portainer_data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
+
+volumes:
+  portainer_data:
