--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -81,13 +81,16 @@ bandwidthManager:
 hubble:
   enabled: true
   metrics:
+    enableOpenMetrics: true
     enabled:
-      - dns:query
+      - dns
       - drop
       - tcp
       - flow
       - icmp
-      - http
+      - port-distribution
+      - httpV2:exemplars=true;labelsContext=source_ip,source_namespace,source_workload,destination_ip,destination_namespace,destination_workload,traffic_direction
+
     serviceMonitor:
       enabled: true
   relay:
