--- a/kubernetes/charts/homelab-gateway/templates/gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gateway.yaml
@@ -7,6 +7,12 @@ metadata:
 spec:
   gatewayClassName: envoy
   listeners:
+  - name: http
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: All
   - name: https
     port: 443
     protocol: HTTPS
