--- a/platform/ai/k8s/openwebui-values.yaml
+++ b/platform/ai/k8s/openwebui-values.yaml
@@ -16,16 +16,15 @@ ollama:
     readOnlyRootFilesystem: false
     capabilities: { drop: ["ALL"] }
     seccompProfile: { type: RuntimeDefault }
-  resources:
-    requests:
-      cpu: 200m
-      memory: 1Gi
-      nvidia.com/gpu: 1
-      # ephemeral-storage: "5Gi"
-    limits:
-      memory: 8Gi
-      nvidia.com/gpu: 1
-      # ephemeral-storage: "10Gi"
+  requests:
+    cpu: 60m
+    memory: 256Mi
+    nvidia.com/gpu: 1
+  limits:
+    cpu: 600m
+    memory: 1Gi
+    nvidia.com/gpu: 1
+
   ollama:
     gpu:
       enabled: true
@@ -40,6 +39,12 @@ ollama:
         - nomic-embed-text
     insecure: true
 
+requests:
+  cpu: 60m
+  memory: 256Mi
+limits:
+  cpu: 300m
+  memory: 400Mi
 nodeSelector:
   kubernetes.io/hostname: mlops-work-01
 podSecurityContext:
