--- a/platform/observability/compose.yaml
+++ b/platform/observability/compose.yaml
@@ -18,6 +18,11 @@ services:
     restart: unless-stopped
     ports:
       - 9090:9090
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
 
