--- a/platform/observability/prometheus/prometheus.yml
+++ b/platform/observability/prometheus/prometheus.yml
@@ -8,7 +8,8 @@ global:
   label_limit: 30
   label_name_length_limit: 200
   label_value_length_limit: 200
-  scrape_configs:
-    - job_name: 'dcgm'
-      static_configs:
-        - targets: ['dcgm.homelab.internal'] # change this
+
+scrape_configs:
+  - job_name: 'dcgm'
+    static_configs:
+      - targets: ['dcgm.homelab.internal:9400']
