--- a/tf_modules/talos_cluster/patches/containerd.yaml
+++ b/tf_modules/talos_cluster/patches/containerd.yaml
@@ -4,6 +4,8 @@ machine:
     - op: create
       path: /etc/cri/conf.d/20-customization.part
       content: |-
+        [metrics]
+          address = "0.0.0.0:11234"
         [plugins."io.containerd.grpc.v1.cri"]
           enable_unprivileged_ports = true
           enable_unprivileged_icmp = true
@@ -11,3 +13,8 @@ machine:
           discard_unpacked_layers = false
         [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
           discard_unpacked_layers = false
+        [plugins."io.containerd.cri.v1.images"]
+          discard_unpacked_layers = false
+        [plugins."io.containerd.cri.v1.runtime"]
+          [plugins."io.containerd.cri.v1.runtime".containerd]
+            default_runtime_name = "nvidia"
